src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> encabezamiento var_list func_list cuerpo
Rule 2     program -> encabezamiento var_list cuerpo
Rule 3     program -> encabezamiento func_list cuerpo
Rule 4     program -> encabezamiento cuerpo
Rule 5     calcula_globales -> <empty>
Rule 6     encabezamiento -> PROGRAM ID
Rule 7     context_to_global -> <empty>
Rule 8     cuerpo -> MAIN context_to_global OPPARENTH CLPARENTH OPBRACE estat_list calcula_globales CLBRACE
Rule 9     variable -> VAR ID COLON var_typ
Rule 10    variable -> VAR ID COLON var_typ dims
Rule 11    var_list -> variable var_list
Rule 12    var_list -> variable
Rule 13    func_list -> func func_list
Rule 14    func_list -> func
Rule 15    estat_list -> estat estat_list
Rule 16    estat_list -> estat
Rule 17    param_list -> param COMMA param_list
Rule 18    param_list -> param
Rule 19    save_array_size -> <empty>
Rule 20    dims -> OPBRACKET aritm save_array_size CLBRACKET
Rule 21    dims -> OPBRACKET aritm save_array_size CLBRACKET OPBRACKET aritm save_array_size CLBRACKET
Rule 22    save_global_func -> <empty>
Rule 23    func -> FUNC ID context_to_local OPPARENTH CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
Rule 24    func -> FUNC ID context_to_local OPPARENTH param_list CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
Rule 25    context_to_local -> <empty>
Rule 26    ciclo_q1 -> <empty>
Rule 27    ciclo_q2 -> <empty>
Rule 28    ciclo -> WHILE ciclo_q1 OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE ciclo_q2
Rule 29    conditional_q1 -> <empty>
Rule 30    conditional_q2 -> <empty>
Rule 31    conditional_q3 -> <empty>
Rule 32    decision -> WHEN OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE conditional_q2
Rule 33    decision -> WHEN OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE ELSE conditional_q3 OPBRACE estat_list CLBRACE conditional_q2
Rule 34    save_return_value -> <empty>
Rule 35    func_cont -> var_list estat_list RETURN aritm save_return_value
Rule 36    func_cont -> estat_list RETURN aritm save_return_value
Rule 37    func_cont -> var_list estat_list
Rule 38    func_cont -> estat_list
Rule 39    estat -> asign
Rule 40    estat -> llam_void
Rule 41    estat -> lectura
Rule 42    estat -> escritura
Rule 43    estat -> carga_dt
Rule 44    estat -> decision
Rule 45    estat -> ciclo
Rule 46    carga_dt -> ID ASGNMNT LOAD OPPARENTH ID CLPARENTH
Rule 47    carga_dt -> ID ASGNMNT LOAD OPPARENTH CONST_STRING add_string_const CLPARENTH
Rule 48    param -> ID COLON var_typ
Rule 49    param -> ID COLON var_typ dims
Rule 50    var_typ -> INT
Rule 51    var_typ -> FLOAT
Rule 52    var_typ -> CHAR
Rule 53    var_typ -> BOOL
Rule 54    var_typ -> FRAME
Rule 55    func_typ -> INT
Rule 56    func_typ -> FLOAT
Rule 57    func_typ -> CHAR
Rule 58    func_typ -> BOOL
Rule 59    func_typ -> FRAME
Rule 60    func_typ -> VOID
Rule 61    check_aritm_operation -> <empty>
Rule 62    check_aritm -> <empty>
Rule 63    aritm -> term check_aritm PLUS check_aritm_operation aritm
Rule 64    aritm -> term check_aritm MINUS check_aritm_operation aritm
Rule 65    aritm -> term check_aritm
Rule 66    check_term_operation -> <empty>
Rule 67    check_term -> <empty>
Rule 68    term -> factor check_term TIMES check_term_operation term
Rule 69    term -> factor check_term DIVIDE check_term_operation term
Rule 70    term -> factor check_term
Rule 71    factortype_const_int -> <empty>
Rule 72    factortype_const_float -> <empty>
Rule 73    factor_const -> CONST_INT factortype_const_int
Rule 74    factor_const -> CONST_FLOAT factortype_const_float
Rule 75    factor_var -> ID
Rule 76    factor_var -> ID dims
Rule 77    function_call_q1 -> <empty>
Rule 78    function_call_q2 -> <empty>
Rule 79    factor_function_call -> ID OPPARENTH function_call_q1 CLPARENTH function_call_q2
Rule 80    factor_function_call -> ID OPPARENTH function_call_q1 args CLPARENTH function_call_q2
Rule 81    check_parenth -> <empty>
Rule 82    factor -> OPPARENTH check_parenth aritm CLPARENTH check_parenth
Rule 83    factor -> factor_function_call
Rule 84    factor -> factor_var
Rule 85    factor -> factor_const
Rule 86    relac -> aritm EQUAL aritm
Rule 87    relac -> aritm UNEQUAL aritm
Rule 88    relac -> aritm LESS aritm
Rule 89    relac -> aritm LESSEQ aritm
Rule 90    relac -> aritm GREATER aritm
Rule 91    relac -> aritm GREATEREQ aritm
Rule 92    arg_q1 -> <empty>
Rule 93    arg_q2 -> <empty>
Rule 94    args -> aritm arg_q1 COMMA arg_q2 args
Rule 95    args -> aritm arg_q1
Rule 96    lectura -> READ OPPARENTH CLPARENTH
Rule 97    escritura -> WRITE OPPARENTH aritm CLPARENTH
Rule 98    escritura -> WRITE OPPARENTH CONST_STRING add_string_const CLPARENTH
Rule 99    llam_void -> ID OPPARENTH function_call_q1 CLPARENTH function_call_q2
Rule 100   llam_void -> ID OPPARENTH function_call_q1 args CLPARENTH function_call_q2
Rule 101   add_string_const -> <empty>
Rule 102   asign -> ID ASGNMNT lectura
Rule 103   asign -> ID ASGNMNT aritm
Rule 104   asign -> ID ASGNMNT CONST_STRING add_string_const
Rule 105   asign -> ID dims ASGNMNT lectura
Rule 106   asign -> ID dims ASGNMNT aritm
Rule 107   asign -> ID dims ASGNMNT CONST_STRING add_string_const

Terminals, with rules where they appear

ASGNMNT              : 46 47 102 103 104 105 106 107
BOOL                 : 53 58
CHAR                 : 52 57
CLBRACE              : 8 23 24 28 32 33 33
CLBRACKET            : 20 21 21
CLPARENTH            : 8 23 24 28 32 33 46 47 79 80 82 96 97 98 99 100
COLON                : 9 10 23 24 48 49
COMMA                : 17 94
CONST_FLOAT          : 74
CONST_INT            : 73
CONST_STRING         : 47 98 104 107
DIVIDE               : 69
ELSE                 : 33
EQUAL                : 86
FLOAT                : 51 56
FRAME                : 54 59
FUNC                 : 23 24
GREATER              : 90
GREATEREQ            : 91
ID                   : 6 9 10 23 24 46 46 47 48 49 75 76 79 80 99 100 102 103 104 105 106 107
INT                  : 50 55
LESS                 : 88
LESSEQ               : 89
LOAD                 : 46 47
MAIN                 : 8
MINUS                : 64
OPBRACE              : 8 23 24 28 32 33 33
OPBRACKET            : 20 21 21
OPPARENTH            : 8 23 24 28 32 33 46 47 79 80 82 96 97 98 99 100
PLUS                 : 63
PROGRAM              : 6
READ                 : 96
RETURN               : 35 36
THEN                 : 28 32 33
TIMES                : 68
UNEQUAL              : 87
VAR                  : 9 10
VOID                 : 60
WHEN                 : 32 33
WHILE                : 28
WRITE                : 97 98
error                : 

Nonterminals, with rules where they appear

add_string_const     : 47 98 104 107
arg_q1               : 94 95
arg_q2               : 94
args                 : 80 94 100
aritm                : 20 21 21 35 36 63 64 82 86 86 87 87 88 88 89 89 90 90 91 91 94 95 97 103 106
asign                : 39
calcula_globales     : 8
carga_dt             : 43
check_aritm          : 63 64 65
check_aritm_operation : 63 64
check_parenth        : 82 82
check_term           : 68 69 70
check_term_operation : 68 69
ciclo                : 45
ciclo_q1             : 28
ciclo_q2             : 28
conditional_q1       : 28 32 33
conditional_q2       : 32 33
conditional_q3       : 33
context_to_global    : 8
context_to_local     : 23 24
cuerpo               : 1 2 3 4
decision             : 44
dims                 : 10 49 76 105 106 107
encabezamiento       : 1 2 3 4
escritura            : 42
estat                : 15 16
estat_list           : 8 15 28 32 33 33 35 36 37 38
factor               : 68 69 70
factor_const         : 85
factor_function_call : 83
factor_var           : 84
factortype_const_float : 74
factortype_const_int : 73
func                 : 13 14
func_cont            : 23 24
func_list            : 1 3 13
func_typ             : 23 24
function_call_q1     : 79 80 99 100
function_call_q2     : 79 80 99 100
lectura              : 41 102 105
llam_void            : 40
param                : 17 18
param_list           : 17 24
program              : 0
relac                : 28 32 33
save_array_size      : 20 21 21
save_global_func     : 23 24
save_return_value    : 35 36
term                 : 63 64 65 68 69
var_list             : 1 2 11 35 37
var_typ              : 9 10 48 49
variable             : 11 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . encabezamiento var_list func_list cuerpo
    (2) program -> . encabezamiento var_list cuerpo
    (3) program -> . encabezamiento func_list cuerpo
    (4) program -> . encabezamiento cuerpo
    (6) encabezamiento -> . PROGRAM ID

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    encabezamiento                 shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> encabezamiento . var_list func_list cuerpo
    (2) program -> encabezamiento . var_list cuerpo
    (3) program -> encabezamiento . func_list cuerpo
    (4) program -> encabezamiento . cuerpo
    (11) var_list -> . variable var_list
    (12) var_list -> . variable
    (13) func_list -> . func func_list
    (14) func_list -> . func
    (8) cuerpo -> . MAIN context_to_global OPPARENTH CLPARENTH OPBRACE estat_list calcula_globales CLBRACE
    (9) variable -> . VAR ID COLON var_typ
    (10) variable -> . VAR ID COLON var_typ dims
    (23) func -> . FUNC ID context_to_local OPPARENTH CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (24) func -> . FUNC ID context_to_local OPPARENTH param_list CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE

    MAIN            shift and go to state 9
    VAR             shift and go to state 10
    FUNC            shift and go to state 11

    var_list                       shift and go to state 4
    func_list                      shift and go to state 5
    cuerpo                         shift and go to state 6
    variable                       shift and go to state 7
    func                           shift and go to state 8

state 3

    (6) encabezamiento -> PROGRAM . ID

    ID              shift and go to state 12


state 4

    (1) program -> encabezamiento var_list . func_list cuerpo
    (2) program -> encabezamiento var_list . cuerpo
    (13) func_list -> . func func_list
    (14) func_list -> . func
    (8) cuerpo -> . MAIN context_to_global OPPARENTH CLPARENTH OPBRACE estat_list calcula_globales CLBRACE
    (23) func -> . FUNC ID context_to_local OPPARENTH CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (24) func -> . FUNC ID context_to_local OPPARENTH param_list CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE

    MAIN            shift and go to state 9
    FUNC            shift and go to state 11

    func_list                      shift and go to state 13
    cuerpo                         shift and go to state 14
    func                           shift and go to state 8

state 5

    (3) program -> encabezamiento func_list . cuerpo
    (8) cuerpo -> . MAIN context_to_global OPPARENTH CLPARENTH OPBRACE estat_list calcula_globales CLBRACE

    MAIN            shift and go to state 9

    cuerpo                         shift and go to state 15

state 6

    (4) program -> encabezamiento cuerpo .

    $end            reduce using rule 4 (program -> encabezamiento cuerpo .)


state 7

    (11) var_list -> variable . var_list
    (12) var_list -> variable .
    (11) var_list -> . variable var_list
    (12) var_list -> . variable
    (9) variable -> . VAR ID COLON var_typ
    (10) variable -> . VAR ID COLON var_typ dims

    MAIN            reduce using rule 12 (var_list -> variable .)
    FUNC            reduce using rule 12 (var_list -> variable .)
    ID              reduce using rule 12 (var_list -> variable .)
    READ            reduce using rule 12 (var_list -> variable .)
    WRITE           reduce using rule 12 (var_list -> variable .)
    WHEN            reduce using rule 12 (var_list -> variable .)
    WHILE           reduce using rule 12 (var_list -> variable .)
    VAR             shift and go to state 10

    variable                       shift and go to state 7
    var_list                       shift and go to state 16

state 8

    (13) func_list -> func . func_list
    (14) func_list -> func .
    (13) func_list -> . func func_list
    (14) func_list -> . func
    (23) func -> . FUNC ID context_to_local OPPARENTH CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (24) func -> . FUNC ID context_to_local OPPARENTH param_list CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE

    MAIN            reduce using rule 14 (func_list -> func .)
    FUNC            shift and go to state 11

    func                           shift and go to state 8
    func_list                      shift and go to state 17

state 9

    (8) cuerpo -> MAIN . context_to_global OPPARENTH CLPARENTH OPBRACE estat_list calcula_globales CLBRACE
    (7) context_to_global -> .

    OPPARENTH       reduce using rule 7 (context_to_global -> .)

    context_to_global              shift and go to state 18

state 10

    (9) variable -> VAR . ID COLON var_typ
    (10) variable -> VAR . ID COLON var_typ dims

    ID              shift and go to state 19


state 11

    (23) func -> FUNC . ID context_to_local OPPARENTH CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (24) func -> FUNC . ID context_to_local OPPARENTH param_list CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE

    ID              shift and go to state 20


state 12

    (6) encabezamiento -> PROGRAM ID .

    MAIN            reduce using rule 6 (encabezamiento -> PROGRAM ID .)
    VAR             reduce using rule 6 (encabezamiento -> PROGRAM ID .)
    FUNC            reduce using rule 6 (encabezamiento -> PROGRAM ID .)


state 13

    (1) program -> encabezamiento var_list func_list . cuerpo
    (8) cuerpo -> . MAIN context_to_global OPPARENTH CLPARENTH OPBRACE estat_list calcula_globales CLBRACE

    MAIN            shift and go to state 9

    cuerpo                         shift and go to state 21

state 14

    (2) program -> encabezamiento var_list cuerpo .

    $end            reduce using rule 2 (program -> encabezamiento var_list cuerpo .)


state 15

    (3) program -> encabezamiento func_list cuerpo .

    $end            reduce using rule 3 (program -> encabezamiento func_list cuerpo .)


state 16

    (11) var_list -> variable var_list .

    MAIN            reduce using rule 11 (var_list -> variable var_list .)
    FUNC            reduce using rule 11 (var_list -> variable var_list .)
    ID              reduce using rule 11 (var_list -> variable var_list .)
    READ            reduce using rule 11 (var_list -> variable var_list .)
    WRITE           reduce using rule 11 (var_list -> variable var_list .)
    WHEN            reduce using rule 11 (var_list -> variable var_list .)
    WHILE           reduce using rule 11 (var_list -> variable var_list .)


state 17

    (13) func_list -> func func_list .

    MAIN            reduce using rule 13 (func_list -> func func_list .)


state 18

    (8) cuerpo -> MAIN context_to_global . OPPARENTH CLPARENTH OPBRACE estat_list calcula_globales CLBRACE

    OPPARENTH       shift and go to state 22


state 19

    (9) variable -> VAR ID . COLON var_typ
    (10) variable -> VAR ID . COLON var_typ dims

    COLON           shift and go to state 23


state 20

    (23) func -> FUNC ID . context_to_local OPPARENTH CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (24) func -> FUNC ID . context_to_local OPPARENTH param_list CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (25) context_to_local -> .

    OPPARENTH       reduce using rule 25 (context_to_local -> .)

    context_to_local               shift and go to state 24

state 21

    (1) program -> encabezamiento var_list func_list cuerpo .

    $end            reduce using rule 1 (program -> encabezamiento var_list func_list cuerpo .)


state 22

    (8) cuerpo -> MAIN context_to_global OPPARENTH . CLPARENTH OPBRACE estat_list calcula_globales CLBRACE

    CLPARENTH       shift and go to state 25


state 23

    (9) variable -> VAR ID COLON . var_typ
    (10) variable -> VAR ID COLON . var_typ dims
    (50) var_typ -> . INT
    (51) var_typ -> . FLOAT
    (52) var_typ -> . CHAR
    (53) var_typ -> . BOOL
    (54) var_typ -> . FRAME

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    CHAR            shift and go to state 29
    BOOL            shift and go to state 30
    FRAME           shift and go to state 31

    var_typ                        shift and go to state 26

state 24

    (23) func -> FUNC ID context_to_local . OPPARENTH CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (24) func -> FUNC ID context_to_local . OPPARENTH param_list CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE

    OPPARENTH       shift and go to state 32


state 25

    (8) cuerpo -> MAIN context_to_global OPPARENTH CLPARENTH . OPBRACE estat_list calcula_globales CLBRACE

    OPBRACE         shift and go to state 33


state 26

    (9) variable -> VAR ID COLON var_typ .
    (10) variable -> VAR ID COLON var_typ . dims
    (20) dims -> . OPBRACKET aritm save_array_size CLBRACKET
    (21) dims -> . OPBRACKET aritm save_array_size CLBRACKET OPBRACKET aritm save_array_size CLBRACKET

    VAR             reduce using rule 9 (variable -> VAR ID COLON var_typ .)
    MAIN            reduce using rule 9 (variable -> VAR ID COLON var_typ .)
    FUNC            reduce using rule 9 (variable -> VAR ID COLON var_typ .)
    ID              reduce using rule 9 (variable -> VAR ID COLON var_typ .)
    READ            reduce using rule 9 (variable -> VAR ID COLON var_typ .)
    WRITE           reduce using rule 9 (variable -> VAR ID COLON var_typ .)
    WHEN            reduce using rule 9 (variable -> VAR ID COLON var_typ .)
    WHILE           reduce using rule 9 (variable -> VAR ID COLON var_typ .)
    OPBRACKET       shift and go to state 35

    dims                           shift and go to state 34

state 27

    (50) var_typ -> INT .

    OPBRACKET       reduce using rule 50 (var_typ -> INT .)
    VAR             reduce using rule 50 (var_typ -> INT .)
    MAIN            reduce using rule 50 (var_typ -> INT .)
    FUNC            reduce using rule 50 (var_typ -> INT .)
    ID              reduce using rule 50 (var_typ -> INT .)
    READ            reduce using rule 50 (var_typ -> INT .)
    WRITE           reduce using rule 50 (var_typ -> INT .)
    WHEN            reduce using rule 50 (var_typ -> INT .)
    WHILE           reduce using rule 50 (var_typ -> INT .)
    COMMA           reduce using rule 50 (var_typ -> INT .)
    CLPARENTH       reduce using rule 50 (var_typ -> INT .)


state 28

    (51) var_typ -> FLOAT .

    OPBRACKET       reduce using rule 51 (var_typ -> FLOAT .)
    VAR             reduce using rule 51 (var_typ -> FLOAT .)
    MAIN            reduce using rule 51 (var_typ -> FLOAT .)
    FUNC            reduce using rule 51 (var_typ -> FLOAT .)
    ID              reduce using rule 51 (var_typ -> FLOAT .)
    READ            reduce using rule 51 (var_typ -> FLOAT .)
    WRITE           reduce using rule 51 (var_typ -> FLOAT .)
    WHEN            reduce using rule 51 (var_typ -> FLOAT .)
    WHILE           reduce using rule 51 (var_typ -> FLOAT .)
    COMMA           reduce using rule 51 (var_typ -> FLOAT .)
    CLPARENTH       reduce using rule 51 (var_typ -> FLOAT .)


state 29

    (52) var_typ -> CHAR .

    OPBRACKET       reduce using rule 52 (var_typ -> CHAR .)
    VAR             reduce using rule 52 (var_typ -> CHAR .)
    MAIN            reduce using rule 52 (var_typ -> CHAR .)
    FUNC            reduce using rule 52 (var_typ -> CHAR .)
    ID              reduce using rule 52 (var_typ -> CHAR .)
    READ            reduce using rule 52 (var_typ -> CHAR .)
    WRITE           reduce using rule 52 (var_typ -> CHAR .)
    WHEN            reduce using rule 52 (var_typ -> CHAR .)
    WHILE           reduce using rule 52 (var_typ -> CHAR .)
    COMMA           reduce using rule 52 (var_typ -> CHAR .)
    CLPARENTH       reduce using rule 52 (var_typ -> CHAR .)


state 30

    (53) var_typ -> BOOL .

    OPBRACKET       reduce using rule 53 (var_typ -> BOOL .)
    VAR             reduce using rule 53 (var_typ -> BOOL .)
    MAIN            reduce using rule 53 (var_typ -> BOOL .)
    FUNC            reduce using rule 53 (var_typ -> BOOL .)
    ID              reduce using rule 53 (var_typ -> BOOL .)
    READ            reduce using rule 53 (var_typ -> BOOL .)
    WRITE           reduce using rule 53 (var_typ -> BOOL .)
    WHEN            reduce using rule 53 (var_typ -> BOOL .)
    WHILE           reduce using rule 53 (var_typ -> BOOL .)
    COMMA           reduce using rule 53 (var_typ -> BOOL .)
    CLPARENTH       reduce using rule 53 (var_typ -> BOOL .)


state 31

    (54) var_typ -> FRAME .

    OPBRACKET       reduce using rule 54 (var_typ -> FRAME .)
    VAR             reduce using rule 54 (var_typ -> FRAME .)
    MAIN            reduce using rule 54 (var_typ -> FRAME .)
    FUNC            reduce using rule 54 (var_typ -> FRAME .)
    ID              reduce using rule 54 (var_typ -> FRAME .)
    READ            reduce using rule 54 (var_typ -> FRAME .)
    WRITE           reduce using rule 54 (var_typ -> FRAME .)
    WHEN            reduce using rule 54 (var_typ -> FRAME .)
    WHILE           reduce using rule 54 (var_typ -> FRAME .)
    COMMA           reduce using rule 54 (var_typ -> FRAME .)
    CLPARENTH       reduce using rule 54 (var_typ -> FRAME .)


state 32

    (23) func -> FUNC ID context_to_local OPPARENTH . CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (24) func -> FUNC ID context_to_local OPPARENTH . param_list CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE
    (17) param_list -> . param COMMA param_list
    (18) param_list -> . param
    (48) param -> . ID COLON var_typ
    (49) param -> . ID COLON var_typ dims

    CLPARENTH       shift and go to state 37
    ID              shift and go to state 36

    param_list                     shift and go to state 38
    param                          shift and go to state 39

state 33

    (8) cuerpo -> MAIN context_to_global OPPARENTH CLPARENTH OPBRACE . estat_list calcula_globales CLBRACE
    (15) estat_list -> . estat estat_list
    (16) estat_list -> . estat
    (39) estat -> . asign
    (40) estat -> . llam_void
    (41) estat -> . lectura
    (42) estat -> . escritura
    (43) estat -> . carga_dt
    (44) estat -> . decision
    (45) estat -> . ciclo
    (102) asign -> . ID ASGNMNT lectura
    (103) asign -> . ID ASGNMNT aritm
    (104) asign -> . ID ASGNMNT CONST_STRING add_string_const
    (105) asign -> . ID dims ASGNMNT lectura
    (106) asign -> . ID dims ASGNMNT aritm
    (107) asign -> . ID dims ASGNMNT CONST_STRING add_string_const
    (99) llam_void -> . ID OPPARENTH function_call_q1 CLPARENTH function_call_q2
    (100) llam_void -> . ID OPPARENTH function_call_q1 args CLPARENTH function_call_q2
    (96) lectura -> . READ OPPARENTH CLPARENTH
    (97) escritura -> . WRITE OPPARENTH aritm CLPARENTH
    (98) escritura -> . WRITE OPPARENTH CONST_STRING add_string_const CLPARENTH
    (46) carga_dt -> . ID ASGNMNT LOAD OPPARENTH ID CLPARENTH
    (47) carga_dt -> . ID ASGNMNT LOAD OPPARENTH CONST_STRING add_string_const CLPARENTH
    (32) decision -> . WHEN OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE conditional_q2
    (33) decision -> . WHEN OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE ELSE conditional_q3 OPBRACE estat_list CLBRACE conditional_q2
    (28) ciclo -> . WHILE ciclo_q1 OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE ciclo_q2

    ID              shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    WHEN            shift and go to state 52
    WHILE           shift and go to state 53

    estat_list                     shift and go to state 40
    estat                          shift and go to state 41
    asign                          shift and go to state 42
    llam_void                      shift and go to state 43
    lectura                        shift and go to state 44
    escritura                      shift and go to state 45
    carga_dt                       shift and go to state 46
    decision                       shift and go to state 47
    ciclo                          shift and go to state 48

state 34

    (10) variable -> VAR ID COLON var_typ dims .

    VAR             reduce using rule 10 (variable -> VAR ID COLON var_typ dims .)
    MAIN            reduce using rule 10 (variable -> VAR ID COLON var_typ dims .)
    FUNC            reduce using rule 10 (variable -> VAR ID COLON var_typ dims .)
    ID              reduce using rule 10 (variable -> VAR ID COLON var_typ dims .)
    READ            reduce using rule 10 (variable -> VAR ID COLON var_typ dims .)
    WRITE           reduce using rule 10 (variable -> VAR ID COLON var_typ dims .)
    WHEN            reduce using rule 10 (variable -> VAR ID COLON var_typ dims .)
    WHILE           reduce using rule 10 (variable -> VAR ID COLON var_typ dims .)


state 35

    (20) dims -> OPBRACKET . aritm save_array_size CLBRACKET
    (21) dims -> OPBRACKET . aritm save_array_size CLBRACKET OPBRACKET aritm save_array_size CLBRACKET
    (63) aritm -> . term check_aritm PLUS check_aritm_operation aritm
    (64) aritm -> . term check_aritm MINUS check_aritm_operation aritm
    (65) aritm -> . term check_aritm
    (68) term -> . factor check_term TIMES check_term_operation term
    (69) term -> . factor check_term DIVIDE check_term_operation term
    (70) term -> . factor check_term
    (82) factor -> . OPPARENTH check_parenth aritm CLPARENTH check_parenth
    (83) factor -> . factor_function_call
    (84) factor -> . factor_var
    (85) factor -> . factor_const
    (79) factor_function_call -> . ID OPPARENTH function_call_q1 CLPARENTH function_call_q2
    (80) factor_function_call -> . ID OPPARENTH function_call_q1 args CLPARENTH function_call_q2
    (75) factor_var -> . ID
    (76) factor_var -> . ID dims
    (73) factor_const -> . CONST_INT factortype_const_int
    (74) factor_const -> . CONST_FLOAT factortype_const_float

    OPPARENTH       shift and go to state 57
    ID              shift and go to state 61
    CONST_INT       shift and go to state 62
    CONST_FLOAT     shift and go to state 63

    aritm                          shift and go to state 54
    term                           shift and go to state 55
    factor                         shift and go to state 56
    factor_function_call           shift and go to state 58
    factor_var                     shift and go to state 59
    factor_const                   shift and go to state 60

state 36

    (48) param -> ID . COLON var_typ
    (49) param -> ID . COLON var_typ dims

    COLON           shift and go to state 64


state 37

    (23) func -> FUNC ID context_to_local OPPARENTH CLPARENTH . COLON func_typ save_global_func OPBRACE func_cont CLBRACE

    COLON           shift and go to state 65


state 38

    (24) func -> FUNC ID context_to_local OPPARENTH param_list . CLPARENTH COLON func_typ save_global_func OPBRACE func_cont CLBRACE

    CLPARENTH       shift and go to state 66


state 39

    (17) param_list -> param . COMMA param_list
    (18) param_list -> param .

    COMMA           shift and go to state 67
    CLPARENTH       reduce using rule 18 (param_list -> param .)


state 40

    (8) cuerpo -> MAIN context_to_global OPPARENTH CLPARENTH OPBRACE estat_list . calcula_globales CLBRACE
    (5) calcula_globales -> .

    CLBRACE         reduce using rule 5 (calcula_globales -> .)

    calcula_globales               shift and go to state 68

state 41

    (15) estat_list -> estat . estat_list
    (16) estat_list -> estat .
    (15) estat_list -> . estat estat_list
    (16) estat_list -> . estat
    (39) estat -> . asign
    (40) estat -> . llam_void
    (41) estat -> . lectura
    (42) estat -> . escritura
    (43) estat -> . carga_dt
    (44) estat -> . decision
    (45) estat -> . ciclo
    (102) asign -> . ID ASGNMNT lectura
    (103) asign -> . ID ASGNMNT aritm
    (104) asign -> . ID ASGNMNT CONST_STRING add_string_const
    (105) asign -> . ID dims ASGNMNT lectura
    (106) asign -> . ID dims ASGNMNT aritm
    (107) asign -> . ID dims ASGNMNT CONST_STRING add_string_const
    (99) llam_void -> . ID OPPARENTH function_call_q1 CLPARENTH function_call_q2
    (100) llam_void -> . ID OPPARENTH function_call_q1 args CLPARENTH function_call_q2
    (96) lectura -> . READ OPPARENTH CLPARENTH
    (97) escritura -> . WRITE OPPARENTH aritm CLPARENTH
    (98) escritura -> . WRITE OPPARENTH CONST_STRING add_string_const CLPARENTH
    (46) carga_dt -> . ID ASGNMNT LOAD OPPARENTH ID CLPARENTH
    (47) carga_dt -> . ID ASGNMNT LOAD OPPARENTH CONST_STRING add_string_const CLPARENTH
    (32) decision -> . WHEN OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE conditional_q2
    (33) decision -> . WHEN OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE ELSE conditional_q3 OPBRACE estat_list CLBRACE conditional_q2
    (28) ciclo -> . WHILE ciclo_q1 OPPARENTH relac conditional_q1 CLPARENTH THEN OPBRACE estat_list CLBRACE ciclo_q2

    CLBRACE         reduce using rule 16 (estat_list -> estat .)
    RETURN          reduce using rule 16 (estat_list -> estat .)
    ID              shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    WHEN            shift and go to state 52
    WHILE           shift and go to state 53

    estat                          shift and go to state 41
    estat_list                     shift and go to state 69
    asign                          shift and go to state 42
    llam_void                      shift and go to state 43
    lectura                        shift and go to state 44
    escritura                      shift and go to state 45
    carga_dt                       shift and go to state 46
    decision                       shift and go to state 47
    ciclo                          shift and go to state 48

state 42

    (39) estat -> asign .

    ID              reduce using rule 39 (estat -> asign .)
    READ            reduce using rule 39 (estat -> asign .)
    WRITE           reduce using rule 39 (estat -> asign .)
    WHEN            reduce using rule 39 (estat -> asign .)
    WHILE           reduce using rule 39 (estat -> asign .)
    CLBRACE         reduce using rule 39 (estat -> asign .)
    RETURN          reduce using rule 39 (estat -> asign .)


state 43

    (40) estat -> llam_void .

    ID              reduce using rule 40 (estat -> llam_void .)
    READ            reduce using rule 40 (estat -> llam_void .)
    WRITE           reduce using rule 40 (estat -> llam_void .)
    WHEN            reduce using rule 40 (estat -> llam_void .)
    WHILE           reduce using rule 40 (estat -> llam_void .)
    CLBRACE         reduce using rule 40 (estat -> llam_void .)
    RETURN          reduce using rule 40 (estat -> llam_void .)


state 44

    (41) estat -> lectura .

    ID              reduce using rule 41 (estat -> lectura .)
    READ            reduce using rule 41 (estat -> lectura .)
    WRITE           reduce using rule 41 (estat -> lectura .)
    WHEN            reduce using rule 41 (estat -> lectura .)
    WHILE           reduce using rule 41 (estat -> lectura .)
    CLBRACE         reduce using rule 41 (estat -> lectura .)
    RETURN          reduce using rule 41 (estat -> lectura .)


state 45

    (42) estat -> escritura .

    ID              reduce using rule 42 (estat -> escritura .)
    READ            reduce using rule 42 (estat -> escritura .)
    WRITE           reduce using rule 42 (estat -> escritura .)
    WHEN            reduce using rule 42 (estat -> escritura .)
    WHILE           reduce using rule 42 (estat -> escritura .)
    CLBRACE         reduce using rule 42 (estat -> escritura .)
    RETURN          reduce using rule 42 (estat -> escritura .)


state 46

    (43) estat -> carga_dt .

    ID              reduce using rule 43 (estat -> carga_dt .)
    READ            reduce using rule 43 (estat -> carga_dt .)
    WRITE           reduce using rule 43 (estat -> carga_dt .)
    WHEN            reduce using rule 43 (estat -> carga_dt .)
    WHILE           reduce using rule 43 (estat -> carga_dt .)
    CLBRACE         reduce using rule 43 (estat -> carga_dt .)
    RETURN          reduce using rule 43 (estat -> carga_dt .)


state 47

    (44) estat -> decision .
